Add folders Lab4

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ endif()
 
 include(FindThreads)
 
+
 add_subdirectory(lab2)
 add_subdirectory(lab3)
+add_subdirectory(lab4)
 add_subdirectory(tests)
