--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -26,4 +26,14 @@ add_executable(lab3_test lab3_test.cpp ../lab3/include/lab3.h ../lab3/src/lab3.c
 target_link_libraries(lab3_test PRIVATE GTest::GTest)
 target_include_directories(lab3_test PRIVATE ../lab3/include)
 
+add_executable(lab4_test test_lab4.cpp ../lab4/src/parent.cpp ../lab4/include/parent.h
+        ../lab4/src/errorlib.cpp ../lab4/include/errorlib.h)
+
+target_link_libraries(lab4_test PRIVATE GTest::GTest)
+target_include_directories(lab4_test PRIVATE ../lab4/include)
+
+add_test(lab2_test lab2_test)
+
 add_test(lab3_test lab3_test)
+
+add_test(lab4_test lab4_test)
