--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,4 +16,5 @@ include(FindThreads)
 add_subdirectory(lab2)
 add_subdirectory(lab3)
 add_subdirectory(lab4)
+add_subdirectory(lab5)
 add_subdirectory(tests)
