--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,4 +17,5 @@ add_subdirectory(lab2)
 add_subdirectory(lab3)
 add_subdirectory(lab4)
 add_subdirectory(lab5)
+add_subdirectory(lab6)
 add_subdirectory(tests)
