--- a/kp1/CMakeLists.txt
+++ b/kp1/CMakeLists.txt
@@ -1,5 +1,2 @@
-add_executable(buddy src/buddy_test.cpp include/buddy_allocator.h)
-add_executable(block src/block_test.cpp include/block_allocator.h)
-
-target_include_directories(buddy PRIVATE include)
-target_include_directories(block PRIVATE include)
+add_executable(kp1 main.cpp src/BuddyAllocator.cpp src/N2Allocator.cpp)
+target_include_directories(kp1 PRIVATE include)
