Add folders KP1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,5 +18,5 @@ add_subdirectory(lab3)
 add_subdirectory(lab4)
 add_subdirectory(lab5)
 add_subdirectory(lab6)
-add_subdirectory(kp1)
+add_subdirectory(KP_1)
 add_subdirectory(tests)
